--- a/scr/BlackBee.Toolkit/WPF/BlackBee.Toolkit.WPF/BlackBee.Toolkit.WPF.csproj
+++ b/scr/BlackBee.Toolkit/WPF/BlackBee.Toolkit.WPF/BlackBee.Toolkit.WPF.csproj
@@ -52,6 +52,9 @@
     <Compile Include="..\Toolkit\BlackBee.Toolkit.Base.WPF\Store.cs">
       <Link>Base\Store.cs</Link>
     </Compile>
+    <Compile Include="..\Toolkit\BlackBee.Toolkit.Base.WPF\ViewModelBase.cs">
+      <Link>Base\ViewModelBase.cs</Link>
+    </Compile>
     <Compile Include="..\Toolkit\BlackBee.Toolkit.Commands.WPF\AsyncCommand.cs">
       <Link>Commands\AsyncCommand.cs</Link>
     </Compile>
